Fix overflow issue in 1st CSS Custom Props post

--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -138,4 +138,8 @@
       border: 1px solid #dddddd;
     }
   }
+
+  .overflow-x {
+    overflow-x: auto;
+  }
 }
